iot hub scaling

--- a/microsoft_certified_iot_developer/2.implementing_iot_infrastructure.md
+++ b/microsoft_certified_iot_developer/2.implementing_iot_infrastructure.md
@@ -173,3 +173,36 @@ The device app operates on the device twin using the following atomic operations
 IoT Hub enforces an 8KB size limit on the value of `tags` and a 32 KB size limit each on the value of `properties/desired` and `properties/reported`. These totals are exclusive of read-only elements.
 
 IoT Hub maintains the timestamp of the last update for each JSON object in device twin desired and reported properties.
+
+### Configure IoT Hub Tier and Scaling
+
+Every IoT solution is different, so Azure IoT Hub offers several options based on pricing and scale. To decide which IoT Hub tier is right for you, ask yourself twp questions:
+
+- **What features do I plan to use ?** - Azure IoT Hub offers two tiers, basic and standard, that differ in the number of features they support. If your solution is based around collecting data from devices and analyzing centrally, then the basic tier is probably right for you. If you want to use more advanced configurations to control IoT devices remotely or distribute some of your workloads onto the devices themselves, then you should consider the standard tier.
+- **How much data do I plan to move daily ?** - Each IoT Hub tier is available in three sizes, based around how much data throughput they can handle in any given day. These sizes are numerically identified as 1,2, and 3.
+
+The standard tier of IoT Hub enables all features, and is required for any IoT solutions that want to make use of the bi-directional communication capabilities. The basic tier enables a subset of the features and is intended for IoT solutions that only need uni-directional communication from devices to the cloud. Both tiers offer the same security and authentication features.
+
+#### Partitions
+
+Azure IoT Hubs contain many core components of Azure Event Hubs, including Partitions. Event streams for IoT Hubs are generally populated with incoming telelmetry data that is reported by various IoT devices. The partitioning of the event stream is used to reduce contentions that occur when concurrently reading and writing to event streams.
+
+The partition limit is chosen when IoT Hub is created and cannot be changed.The maximum partition limit for basic tier IoT Hub and standard tier IoT Hub is 32. Most IoT hubs only need 4 partitions.
+
+#### Tier Upgrade
+
+Once you create your IoT Hub, you can upgrade from the basic tier to the standard tier without interrupting your existing operations. The partition configuration remains unchanged when you migrate from basic tier to standard tier.
+
+#### Message throughput
+
+The best way to size an IoT Hub solution is to evaluate the traffic on a per-unit basis. In particular, consider the required peak throughput for the following categories of operations
+
+- Device-to-cloud messages
+- cloud-to-device messages
+- Identity registry operations
+
+Traffic is measured for your IoT hub on a per-unit basis. When you create an IoT hub, you choose its tier and edition, and set the number of units available. You can purchase up to 200 units for the B1, B2, S1, or S2 edition, or up to 10 units for the B3 or S3 edition. After your IoT hub is created, you can change the number of units available within its edition, upgrade or downgrade between editions within its tier (B1 to B2), or upgrade from the basic to the standard tier (B1 to S1) without interrupting your existing operations.
+
+IoT Hub identity registry operations are not supposed to be run-time operations, as they are mostly related to device provisioning.
+
+If you are approaching the allowed message limit on your IoT hub, you can automatically scale to increment an IoT Hub unit in the same IoT Hub tier.
