device to cloud messaging

--- a/microsoft_certified_iot_developer/2.implementing_iot_infrastructure.md
+++ b/microsoft_certified_iot_developer/2.implementing_iot_infrastructure.md
@@ -185,7 +185,7 @@ The standard tier of IoT Hub enables all features, and is required for any IoT s
 
 #### Partitions
 
-Azure IoT Hubs contain many core components of Azure Event Hubs, including Partitions. Event streams for IoT Hubs are generally populated with incoming telelmetry data that is reported by various IoT devices. The partitioning of the event stream is used to reduce contentions that occur when concurrently reading and writing to event streams.
+Azure IoT Hubs contain many core components of Azure Event Hubs, including Partitions. Event streams for IoT Hubs are generally populated with incoming telemetry data that is reported by various IoT devices. The partitioning of the event stream is used to reduce contentions that occur when concurrently reading and writing to event streams.
 
 The partition limit is chosen when IoT Hub is created and cannot be changed.The maximum partition limit for basic tier IoT Hub and standard tier IoT Hub is 32. Most IoT hubs only need 4 partitions.
 
@@ -206,3 +206,52 @@ Traffic is measured for your IoT hub on a per-unit basis. When you create an IoT
 IoT Hub identity registry operations are not supposed to be run-time operations, as they are mostly related to device provisioning.
 
 If you are approaching the allowed message limit on your IoT hub, you can automatically scale to increment an IoT Hub unit in the same IoT Hub tier.
+
+## Build device messaging and communication
+
+There are two categories of software development kits (SDKs) for working with IoT Hub:
+
+- **IoT Hub Device SDKs** enable you to build apps that run on your IoT device using device client or module client. These apps send telemetry to your IoT hub, and optionally messages, job method or twin updates from your IoT hub.
+- **IoT Hub Service SDKs** enable you to build backend applications to manage your IoT hub, and optionally send messages, schedule jobs, invoke direct methods or send desired property updates to your IoT device or modules.
+
+In addition, Azure IoT also provides a set of SDKs for working with the **Device Provisioning Service**
+
+- **Provisioning Device SDKs** enable you to build apps that run on your IoT devices to communicate with the Device Provisioning Service.
+- **Provisioning Service SDKs** enable you to build backend applications to manage your enrollments in the Device Provisioning Service
+
+Azure IoT Hub Device SDKs
+
+- Azure IoT Hub device SDK for .NET
+- Azure IoT Hub device SDK for C (ANSI C - C99)
+- Azure IoT Hub device SDK for Java
+- Azure IoT Hub device SDK for Node.js
+- Azure IoT Hub device SDK for Python
+- Azure IoT Hub device SDK for iOS
+
+Azure IoT Hub Service SDKs
+
+- Azure IoT Hub service SDK for .NET
+- Azure IoT Hub service SDK for C (ANSI C - C99)
+- Azure IoT Hub service SDK for Java
+- Azure IoT Hub service SDK for Node.js
+- Azure IoT Hub service SDK for Python
+- Azure IoT Hub service SDK for iOS
+
+Azure IoT SDKs also provide a set of tools to help with development:
+
+- `iothub-diagnostics`: a cross-platform command line tool to help diagnose issues related to connection with IoT Hub.
+- `azure-iot-explorer`: a cross-platform desktop application to connect to your IoT Hub and add/manage/communicate with IoT devices.
+
+IoT Hub allows for bi-directional communication with your devices. Use IoT Hub messaging to communicate with your devices by sending messages from your devices to your solutions backend and sending commands from your IoT solutions backend to your devices.
+
+### implement device-to-cloud communication
+
+IoT Hub has a built-in service endpoint that can be used by back-end services to read telemetry messages from your devices. This endpoint is compatible with Event Hubs and you can use standard IoT Hub SDKs. IoT Hub also supports custom endpoints that can be defined by users to send device telemetry data and events to Azure services using message routing.
+
+When sending information from the device app to the solution back end, IoT Hub exposes three options:
+
+- **Device-to-cloud messages** for time series telemetry and alerts
+- **Device twin's reported properties** for reporting device state information such as available capabilities, conditions or the state of long-running workflows.
+- **File uploads** - for media files and large telemetry batches uploaded by intermittently connected device or compressed to save bandwidth
+
+![](assets/d2c.PNG)
